5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4148/executions/1618_2930.log
== TEST (2019-04-02 11:04:31) 
-- CODE:
from math import
t = float(input("periodo de oscilacao"))
g=9,81
l=g*(t/2*pi)**2
print(l)

-- ERROR:
File "XXXX", line 1
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:04:43) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao"))
g=9,81
l=g*(t/2*pi)**2
print(l)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    l=g*(t/2*pi)**2
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:05:00) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao:"))
g=9,81
l=g*(t/2*pi)**2
print(l)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    l=g*(t/2*pi)**2
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:07:56) 
-- CODE:
from math import
t = float(input("periodo de oscilacao:"))
g=9,81
l = g *(t / 2 * 3,14) ** 2
print(l)

-- ERROR:
File "XXXX", line 1
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:08:14) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao:"))
g=9,81
l = g *(t / 2 * pi) ** 2
print(l)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    l = g *(t / 2 * pi) ** 2
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:09:38) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao:"))
g = 9,81
l = g * (t // 2 * pi) ** 2
print(l)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    l = g * (t // 2 * pi) ** 2
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:10:01) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao:"))
g = 9,81
l = g * (t / 2 *3,14) ** 2
print(l)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    l = g * (t / 2 *3,14) ** 2
TypeError: unsupported operand type(s) for ** or pow(): 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:10:13) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao:"))
g = 9,81
l = g * (t / 2 * 3,14) ** 2
print(l)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    l = g * (t / 2 * 3,14) ** 2
TypeError: unsupported operand type(s) for ** or pow(): 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:20:06) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao:"))
g = 9,81
l = g * (t / 2 * 3,14) ** 2
print(l)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    l = g * (t / 2 * 3,14) ** 2
TypeError: unsupported operand type(s) for ** or pow(): 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:20:36) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao:"))
g = 9,81
l = g * (t / 2 * pi) ** 2
print(l)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    l = g * (t / 2 * pi) ** 2
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:20:58) 
-- CODE:
from math import*
t = int(input("periodo de oscilacao:"))
g = 9,81
l = g * (t / 2 * pi) ** 2
print(l)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    t = int(input())
ValueError: invalid literal for int() with base 10: '20.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:21:54) 
-- CODE:
from math import*
t = int(input("periodo de oscilacao: "))
g = 9,81
l = g * (t / 2 * pi) ** 2
print(l)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    t = int(input())
ValueError: invalid literal for int() with base 10: '20.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:22:42) 
-- CODE:
from math import*
t = int(input("periodo de oscilacao: "))
g = 9,81
pi = 3,14
l = g * (t / 2 * pi) ** 2
print(l)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    t = int(input())
ValueError: invalid literal for int() with base 10: '20.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:23:49) 
-- CODE:
from math import*
t = int(input("periodo de oscilacao: "))
g = 9,81
pi = 3,14
l = g * (t / 2pi) ** 2
print(l)

-- ERROR:
File "XXXX", line 5
    l = g * (t / 2pi) ** 2
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:24:02) 
-- CODE:
from math import*
t = int(input("periodo de oscilacao: "))
g = 9,81
pi = 3,14
l = g * (t / 2 * pi) ** 2
print(l)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    t = int(input())
ValueError: invalid literal for int() with base 10: '20.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:25:39) 
-- CODE:
from math import*
t = int(input("periodo de oscilacao: "))
g = 9.81
l = g*(t/2*pi)**2
print(l)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    t = int(input())
ValueError: invalid literal for int() with base 10: '20.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:26:05) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao: "))
g = 9.81
l = g*(t/2*pi)**2
print(l)

-- OUTPUT:
9682.08191746866
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:27:49) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao: "))
g = 9.81
l = g*(t**2/(2*pi)**2)
print(l)

-- OUTPUT:
99.39608115313337
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:27:58) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao: "))
g = 9.81
l = g*(t**2/(2*pi)**2)
print(l)

-- EXECUTION TIME:
0.137852
-- TEST CASE 1:
---- input:
20.0
---- correct output:
99.39608115313338
---- user output:
99.39608115313337
-- TEST CASE 2:
---- input:
168.5
---- correct output:
7055.195962800127
---- user output:
7055.195962800127
-- TEST CASE 3:
---- input:
324.2
---- correct output:
26117.72180773005
---- user output:
26117.721807730053
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:28:26) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao: "))
g = 9.81
l = g*(t**2/(2*pi)**2)
print(l)

-- OUTPUT:
99.39608115313337
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:30:02) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao: "))
g = 9.81
l = g*t**2/(2*pi)**2
print(l)

-- OUTPUT:
99.39608115313337
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:30:17) 
-- CODE:
from math import
t = float(input("periodo de oscilacao: "))
g = 9.81
l = g*t**2/(2*pi)**2
print(l)

-- ERROR:
File "XXXX", line 1
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:30:54) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao: "))
g = 9.82
l = g*t**2/(2*pi)**2
print(l)

-- OUTPUT:
99.49740233677569
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:31:02) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao: "))
g = 9.81
l = g*t**2/(2*pi)**2
print(l)

-- OUTPUT:
99.39608115313337
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:31:47) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao: "))
g = 9.81
l = g*t**2//(2*pi)**2
print(l)

-- OUTPUT:
99.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:31:59) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao: "))
g = 9.81
l = g*t**2/(2*pi)**2
print(l)

-- OUTPUT:
99.39608115313337
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:32:22) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao: "))
g = 9.81
l = g*t**2/(2*pi)**2
print(l)

-- EXECUTION TIME:
0.178931
-- TEST CASE 1:
---- input:
20.0
---- correct output:
99.39608115313338
---- user output:
99.39608115313337
-- TEST CASE 2:
---- input:
168.5
---- correct output:
7055.195962800127
---- user output:
7055.195962800128
-- TEST CASE 3:
---- input:
324.2
---- correct output:
26117.72180773005
---- user output:
26117.72180773005
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:32:31) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao: "))
g = 9.81
l = g*t**2/(2*pi)**2
print(l)

-- EXECUTION TIME:
0.155384
-- TEST CASE 1:
---- input:
20.0
---- correct output:
99.39608115313338
---- user output:
99.39608115313337
-- TEST CASE 2:
---- input:
168.5
---- correct output:
7055.195962800127
---- user output:
7055.195962800128
-- TEST CASE 3:
---- input:
324.2
---- correct output:
26117.72180773005
---- user output:
26117.72180773005
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:32:33) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao: "))
g = 9.81
l = g*t**2/(2*pi)**2
print(l)

-- EXECUTION TIME:
0.197656
-- TEST CASE 1:
---- input:
20.0
---- correct output:
99.39608115313338
---- user output:
99.39608115313337
-- TEST CASE 2:
---- input:
168.5
---- correct output:
7055.195962800127
---- user output:
7055.195962800128
-- TEST CASE 3:
---- input:
324.2
---- correct output:
26117.72180773005
---- user output:
99.39608115313337
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:32:33) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao: "))
g = 9.81
l = g*t**2/(2*pi)**2
print(l)

-- EXECUTION TIME:
0.152164
-- TEST CASE 1:
---- input:
20.0
---- correct output:
99.39608115313338
---- user output:
99.39608115313337
-- TEST CASE 2:
---- input:
168.5
---- correct output:
7055.195962800127
---- user output:
7055.195962800128
-- TEST CASE 3:
---- input:
324.2
---- correct output:
26117.72180773005
---- user output:
26117.72180773005
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:32:33) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao: "))
g = 9.81
l = g*t**2/(2*pi)**2
print(l)

-- OUTPUT:
99.39608115313337
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:32:37) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao: "))
g = 9.81
l = g*t**2/(2*pi)**2
print(l)

-- EXECUTION TIME:
0.177207
-- TEST CASE 1:
---- input:
20.0
---- correct output:
99.39608115313338
---- user output:
99.39608115313337
-- TEST CASE 2:
---- input:
168.5
---- correct output:
7055.195962800127
---- user output:
7055.195962800128
-- TEST CASE 3:
---- input:
324.2
---- correct output:
26117.72180773005
---- user output:
26117.72180773005
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:32:39) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao: "))
g = 9.81
l = g*t**2/(2*pi)**2
print(l)

-- EXECUTION TIME:
0.157613
-- TEST CASE 1:
---- input:
20.0
---- correct output:
99.39608115313338
---- user output:
99.39608115313337
-- TEST CASE 2:
---- input:
168.5
---- correct output:
7055.195962800127
---- user output:
7055.195962800128
-- TEST CASE 3:
---- input:
324.2
---- correct output:
26117.72180773005
---- user output:
99.39608115313337
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:32:39) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao: "))
g = 9.81
l = g*t**2/(2*pi)**2
print(l)

-- EXECUTION TIME:
0.128727
-- TEST CASE 1:
---- input:
20.0
---- correct output:
99.39608115313338
---- user output:
99.39608115313337
-- TEST CASE 2:
---- input:
168.5
---- correct output:
7055.195962800127
---- user output:
7055.195962800128
-- TEST CASE 3:
---- input:
324.2
---- correct output:
26117.72180773005
---- user output:
26117.72180773005
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:32:47) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao: "))
g = 9.81
l = g*t**2/(2*pi)**2
print(l)

-- OUTPUT:
99.39608115313337
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:33:34) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao: "))
g = 9.81
l = g*(t**2/(2*pi))**2
print(l)

-- OUTPUT:
39758.432461253346
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:33:46) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao: "))
g = 9.81
l = g*(t**2/2*pi)**2
print(l)

-- OUTPUT:
3872832.7669874644
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:34:09) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao: "))
g = 9.81
l = g*((t**2/2*pi)**2)
print(l)

-- OUTPUT:
3872832.7669874644
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:34:59) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao: "))
g = 9.81
l = g*(t**2/(2*pi)**2)
print(l)

-- OUTPUT:
99.39608115313337
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:37:04) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao: "))
g = 9.81
l = g*(t/2*pi)**2
print(l)

-- OUTPUT:
9682.08191746866
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:39:13) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao: "))
g = 9.81
l = g * ((t / 2 * pi) ** 2)
print(l)

-- OUTPUT:
9682.08191746866
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:41:10) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao: "))
g = 9.81
l = g * (t / 2 * pi) ** 2
print(l)

-- OUTPUT:
9682.08191746866
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:41:27) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao: "))
g = 9.81
l = g * ((t / 2 * pi) ** 2)
print(l)

-- OUTPUT:
9682.08191746866
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:41:35) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao: "))
g = 9.81
l = g * ((t // 2 * pi) ** 2)
print(l)

-- OUTPUT:
9682.08191746866
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:41:50) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao: "))
g = 9.81
l = g * (t // 2 * pi) ** 2
print(l)

-- OUTPUT:
9682.08191746866
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:42:20) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao: "))
g = 9.81
l = g * (t /(2 * pi) ** 2)
print(l)

-- OUTPUT:
4.969804057656668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:43:03) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao: "))
g = 9.81
l = g * (t**2/(2 * pi)** 2)
print(l)

-- OUTPUT:
99.39608115313337
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:44:01) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao: "))
g = 9.81
l = g * (t**2/(2 * pi)** 2)
print(l)

-- OUTPUT:
99.39608115313337
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:44:40) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao: "))
g = 9.81
l = g * (t**2/2pi** 2)
print(l)

-- ERROR:
File "XXXX", line 4
    l = g * (t**2/2pi** 2)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:45:42) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao: "))
g = 9.81
l = g * (t ** 2 // (2 * pi) ** 2)
print(l)

-- OUTPUT:
98.10000000000001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:45:53) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao: "))
g = 9.81
l = g * (t ** 2 / (2 * pi) ** 2)
print(l)

-- OUTPUT:
99.39608115313337
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:51:26) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao: "))
g = 9.81
l = g * ((t)**2/(2*pi)**2) 
print(l)

-- OUTPUT:
99.39608115313337
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:53:31) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao: "))
g = 9.81
l = g * (t/(2*pi))**2
print(l)

-- OUTPUT:
99.39608115313338
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:53:49) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao: "))
g = 9.81
l = g * (t/(2*pi))**2
print(l)

-- EXECUTION TIME:
0.164519
-- TEST CASE 1:
---- input:
20.0
---- correct output:
99.39608115313338
---- user output:
99.39608115313338
-- TEST CASE 2:
---- input:
168.5
---- correct output:
7055.195962800127
---- user output:
7055.195962800127
-- TEST CASE 3:
---- input:
324.2
---- correct output:
26117.72180773005
---- user output:
26117.72180773005
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
